--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -1,15 +1,18 @@
 header {
-    background-color: darkblue;
+    background-color: rgb(32, 0, 32);
     color: antiquewhite;
     text-align: center;
     font-size: larger;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   main {
     background-color: black;
     color: lightgrey;
     padding: 1em;
     text-align: center;
-    font-size: larger;
+    font-size: large;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
   }
   body {
     background-image: url(record.png);
